Updated mods for client and server side
Added checklist, updated mods for both side (Need to run packwiz refresh when making edits to the toml files, generate new hashes.)

Several mods needed to be in both sides of modpack download list, edited .toml side line to "both"

Added CreateAg_Mod_Checklist.csv for checking mods I know I need to add

--- a/mods/smartbrainlib.pw.toml
+++ b/mods/smartbrainlib.pw.toml
@@ -1,6 +1,6 @@
 name = "SmartBrainLib"
 filename = "SmartBrainLib-neoforge-1.20.1-1.13.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/PuyPazRT/versions/qNnjjZzo/SmartBrainLib-neoforge-1.20.1-1.13.jar"
