--- a/mods/ct-overhaul-village.pw.toml
+++ b/mods/ct-overhaul-village.pw.toml
@@ -1,6 +1,6 @@
 name = "ChoiceTheorem's Overhauled Village"
 filename = "[Forge]ctov-3.4.2.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/fgmhI8kH/versions/SHDgiWhe/%5BForge%5Dctov-3.4.2.jar"
