--- a/mods/lmd.pw.toml
+++ b/mods/lmd.pw.toml
@@ -1,13 +1,13 @@
 name = "Let Me Despawn"
-filename = "letmedespawn-forge-1.20.x-1.2.0.jar"
+filename = "letmedespawn-forge-1.20.1-1.20.4-1.2.1.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/vE2FN5qn/versions/a1JZWhla/letmedespawn-forge-1.20.x-1.2.0.jar"
+url = "https://cdn.modrinth.com/data/vE2FN5qn/versions/Z136Eles/letmedespawn-forge-1.20.1-1.20.4-1.2.1.jar"
 hash-format = "sha1"
-hash = "5168aca016a9384a889f74f4b0082cd8b0f50abb"
+hash = "62f1aa1f71f2069f6754c902ece9758cbdcc154c"
 
 [update]
 [update.modrinth]
 mod-id = "vE2FN5qn"
-version = "a1JZWhla"
+version = "Z136Eles"
