--- a/mods/smartbrainlib.pw.toml
+++ b/mods/smartbrainlib.pw.toml
@@ -1,13 +1,13 @@
 name = "SmartBrainLib"
-filename = "SmartBrainLib-neoforge-1.20.1-1.13.jar"
+filename = "SmartBrainLib-neoforge-1.20.1-1.14.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/PuyPazRT/versions/qNnjjZzo/SmartBrainLib-neoforge-1.20.1-1.13.jar"
+url = "https://cdn.modrinth.com/data/PuyPazRT/versions/JJ4nopDF/SmartBrainLib-neoforge-1.20.1-1.14.jar"
 hash-format = "sha1"
-hash = "599cb864c7e414d7f64e914b25f73ce7c15f1296"
+hash = "012d85ac31517694c82083b8322add54be498e04"
 
 [update]
 [update.modrinth]
 mod-id = "PuyPazRT"
-version = "qNnjjZzo"
+version = "JJ4nopDF"
