--- a/mods/sound-physics-remastered.pw.toml
+++ b/mods/sound-physics-remastered.pw.toml
@@ -1,13 +1,13 @@
 name = "Sound Physics Remastered"
-filename = "sound-physics-remastered-forge-1.20.1-1.3.1.jar"
+filename = "sound-physics-remastered-forge-1.20.1-1.4.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/qyVF9oeo/versions/CmxXa8uE/sound-physics-remastered-forge-1.20.1-1.3.1.jar"
+url = "https://cdn.modrinth.com/data/qyVF9oeo/versions/WC9KAg08/sound-physics-remastered-forge-1.20.1-1.4.2.jar"
 hash-format = "sha1"
-hash = "47b74fae41e3a677dbbb939d67b4160f3e4af5b6"
+hash = "f8fe151b0a46a3da70ddc4e09345a60728b4542c"
 
 [update]
 [update.modrinth]
 mod-id = "qyVF9oeo"
-version = "CmxXa8uE"
+version = "WC9KAg08"
