--- a/mods/crate-delight.pw.toml
+++ b/mods/crate-delight.pw.toml
@@ -1,13 +1,13 @@
 name = "Crate Delight"
-filename = "cratedelight-1.0.7-1.20.1-forge.jar"
+filename = "cratedelight-2024.05.05-1.20.1-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9rlXSyLg/versions/YNpmzfhG/cratedelight-1.0.7-1.20.1-forge.jar"
+url = "https://cdn.modrinth.com/data/9rlXSyLg/versions/QPVpShEe/cratedelight-2024.05.05-1.20.1-forge.jar"
 hash-format = "sha1"
-hash = "3c208f4cf25c5999935db798e608afe1f5126125"
+hash = "5df5f34bc5dd0a2373c06a4653d9c4d492bf5537"
 
 [update]
 [update.modrinth]
 mod-id = "9rlXSyLg"
-version = "YNpmzfhG"
+version = "QPVpShEe"
