--- a/mods/ct-overhaul-village.pw.toml
+++ b/mods/ct-overhaul-village.pw.toml
@@ -1,13 +1,13 @@
 name = "ChoiceTheorem's Overhauled Village"
-filename = "[Forge]ctov-3.4.2.jar"
-side = "both"
+filename = "ctov-3.3.6.jar"
+side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/fgmhI8kH/versions/SHDgiWhe/%5BForge%5Dctov-3.4.2.jar"
+url = "https://cdn.modrinth.com/data/fgmhI8kH/versions/nF92O1uF/ctov-3.3.6.jar"
 hash-format = "sha1"
-hash = "962782a5149aecfc19d1357db3112cc90baad252"
+hash = "9fe2efeb1f2bff5309191c088437d0c6b4121e82"
 
 [update]
 [update.modrinth]
 mod-id = "fgmhI8kH"
-version = "SHDgiWhe"
+version = "nF92O1uF"
