--- a/mods/ecospherical-expansion.pw.toml
+++ b/mods/ecospherical-expansion.pw.toml
@@ -1,13 +1,13 @@
 name = "Ecospherical Expansion"
-filename = "ecosphericalexpansion-1.20.2-2.4.4.jar"
+filename = "ecosphericalexpansion-1.20.x-2.4.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/WtcuxDNN/versions/SNc9wioU/ecosphericalexpansion-1.20.2-2.4.4.jar"
+url = "https://cdn.modrinth.com/data/WtcuxDNN/versions/5lXIJiba/ecosphericalexpansion-1.20.x-2.4.6.jar"
 hash-format = "sha1"
-hash = "4843894e33f24ecd9e122905244bb582c83aaefe"
+hash = "24c4d658826853049a076cbc8a2d9e9f3e1744e5"
 
 [update]
 [update.modrinth]
 mod-id = "WtcuxDNN"
-version = "SNc9wioU"
+version = "5lXIJiba"
