--- a/mods/ends-delight.pw.toml
+++ b/mods/ends-delight.pw.toml
@@ -1,13 +1,13 @@
 name = "End's Delight"
-filename = "ends_delight-1.20.1-1.0.1.jar"
+filename = "ends_delight-1.20.1-2.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/yHN0njMr/versions/99a5wEsK/ends_delight-1.20.1-1.0.1.jar"
+url = "https://cdn.modrinth.com/data/yHN0njMr/versions/X03B5YHy/ends_delight-1.20.1-2.0.jar"
 hash-format = "sha1"
-hash = "f6a9c2215a0ed1188526bbf15c55bd1709d8f7d8"
+hash = "6f8935fc50b4197d75d9620465ae3904b0a02aa0"
 
 [update]
 [update.modrinth]
 mod-id = "yHN0njMr"
-version = "99a5wEsK"
+version = "X03B5YHy"
