--- a/mods/expanded-combat.pw.toml
+++ b/mods/expanded-combat.pw.toml
@@ -1,13 +1,13 @@
 name = "Expanded Combat"
-filename = "expanded_combat-1.20.1-3.1.0-all.jar"
+filename = "expanded_combat-1.20.1-3.1.2-all.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/sElBpAJt/versions/mfoJbG3D/expanded_combat-1.20.1-3.1.0-all.jar"
+url = "https://cdn.modrinth.com/data/sElBpAJt/versions/lpFnV3NC/expanded_combat-1.20.1-3.1.2-all.jar"
 hash-format = "sha1"
-hash = "d3774441f7df376ed03670b3dc0587497249cd6b"
+hash = "ad7d463be8e021ff5d43e66f69d7cc9a89b9724b"
 
 [update]
 [update.modrinth]
 mod-id = "sElBpAJt"
-version = "mfoJbG3D"
+version = "lpFnV3NC"
