--- a/mods/geckolib.pw.toml
+++ b/mods/geckolib.pw.toml
@@ -1,13 +1,13 @@
 name = "Geckolib"
-filename = "geckolib-neoforge-1.20.1-4.4.4.jar"
+filename = "geckolib-neoforge-1.20.1-4.4.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/8BmcQJ2H/versions/72yIIxm4/geckolib-neoforge-1.20.1-4.4.4.jar"
+url = "https://cdn.modrinth.com/data/8BmcQJ2H/versions/eqdCWw5e/geckolib-neoforge-1.20.1-4.4.6.jar"
 hash-format = "sha1"
-hash = "31ce368654ddd236b2d0f567ce254363af43b770"
+hash = "8332639e4d970021617fd86df38f2ca8f6d52337"
 
 [update]
 [update.modrinth]
 mod-id = "8BmcQJ2H"
-version = "72yIIxm4"
+version = "eqdCWw5e"
