--- a/mods/immersive-aircraft.pw.toml
+++ b/mods/immersive-aircraft.pw.toml
@@ -1,13 +1,13 @@
 name = "Immersive Aircraft"
-filename = "immersive_aircraft-0.7.5+1.20.1-forge.jar"
+filename = "immersive_aircraft-1.0.1+1.20.1-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/x3HZvrj6/versions/XJ8eDuSE/immersive_aircraft-0.7.5%2B1.20.1-forge.jar"
+url = "https://cdn.modrinth.com/data/x3HZvrj6/versions/Tju2o3p2/immersive_aircraft-1.0.1%2B1.20.1-forge.jar"
 hash-format = "sha1"
-hash = "3f52b3764dcd097505974a1d8380972d3c54c343"
+hash = "457aab3ae1a01a8a92fa707039243c908079cbe8"
 
 [update]
 [update.modrinth]
 mod-id = "x3HZvrj6"
-version = "XJ8eDuSE"
+version = "Tju2o3p2"
