--- a/mods/lithostitched.pw.toml
+++ b/mods/lithostitched.pw.toml
@@ -1,13 +1,13 @@
 name = "Lithostitched"
-filename = "lithostitched-forge-1.20.1-1.1.5.jar"
-side = "both"
+filename = "lithostitched-forge-1.20.1-1.1.6.jar"
+side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/XaDC71GB/versions/Tr6EqtWX/lithostitched-forge-1.20.1-1.1.5.jar"
+url = "https://cdn.modrinth.com/data/XaDC71GB/versions/leDMJ3Pd/lithostitched-forge-1.20.1-1.1.6.jar"
 hash-format = "sha1"
-hash = "f1a538d8b0913a090ddbc2a59d6fcb6f88bebb7c"
+hash = "5f2e4b24c255d41fc7e3fbe10301b064ded999df"
 
 [update]
 [update.modrinth]
 mod-id = "XaDC71GB"
-version = "Tr6EqtWX"
+version = "leDMJ3Pd"
