--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.4-forge.jar"
+filename = "moonlight-1.20-2.12.1-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/kxiwYQnp/moonlight-1.20-2.11.4-forge.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/CEQdHBs1/moonlight-1.20-2.12.1-forge.jar"
 hash-format = "sha1"
-hash = "92bdd456ab9a8fb466fea14f1b5731987f7f607e"
+hash = "cf3e483e36f53da9a39f062aa0227d87aae91d37"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "kxiwYQnp"
+version = "CEQdHBs1"
