--- a/mods/storage-delight.pw.toml
+++ b/mods/storage-delight.pw.toml
@@ -1,13 +1,13 @@
 name = "Storage Delight"
-filename = "storagedelight-1.0.2-1.20.1-forge.jar"
+filename = "storagedelight-1.1.1-1.20.1-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/LTTvOp5L/versions/Cu02gih5/storagedelight-1.0.2-1.20.1-forge.jar"
+url = "https://cdn.modrinth.com/data/LTTvOp5L/versions/AHvuXNcv/storagedelight-1.1.1-1.20.1-forge.jar"
 hash-format = "sha1"
-hash = "fcaad95ae8adbf453c931641ab65082a2802d97d"
+hash = "9ae73f34f6f28a7d0269d639a3eb45edd77b79f0"
 
 [update]
 [update.modrinth]
 mod-id = "LTTvOp5L"
-version = "Cu02gih5"
+version = "AHvuXNcv"
