--- a/mods/thermal-cultivation.pw.toml
+++ b/mods/thermal-cultivation.pw.toml
@@ -1,13 +1,13 @@
 name = "Thermal Cultivation"
-filename = "thermal_cultivation-1.20.1-11.0.0.22.jar"
+filename = "thermal_cultivation-1.20.1-11.0.1.24.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/5beJoehw/versions/68y2RhYV/thermal_cultivation-1.20.1-11.0.0.22.jar"
+url = "https://cdn.modrinth.com/data/5beJoehw/versions/A2jLUXFB/thermal_cultivation-1.20.1-11.0.1.24.jar"
 hash-format = "sha1"
-hash = "2e48733ec79ec90e95d7c13e7d56aae8ba4bbf97"
+hash = "1973b5142aedca44aefa66d2406643e7d00205c7"
 
 [update]
 [update.modrinth]
 mod-id = "5beJoehw"
-version = "68y2RhYV"
+version = "A2jLUXFB"
