--- a/mods/thermal-foundation.pw.toml
+++ b/mods/thermal-foundation.pw.toml
@@ -1,13 +1,13 @@
 name = "Thermal Foundation"
-filename = "thermal_foundation-1.20.1-11.0.2.64.jar"
+filename = "thermal_foundation-1.20.1-11.0.6.70.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Xvg6q5Wp/versions/dUiPDb6I/thermal_foundation-1.20.1-11.0.2.64.jar"
+url = "https://cdn.modrinth.com/data/Xvg6q5Wp/versions/44ilyZbi/thermal_foundation-1.20.1-11.0.6.70.jar"
 hash-format = "sha1"
-hash = "8dc55a88ac3a5f03bd95faadafb2ef379d36c4f7"
+hash = "7c1fbd79c9bda7478560faa886eaadf0dd8d181f"
 
 [update]
 [update.modrinth]
 mod-id = "Xvg6q5Wp"
-version = "dUiPDb6I"
+version = "44ilyZbi"
