--- a/mods/zeta.pw.toml
+++ b/mods/zeta.pw.toml
@@ -1,13 +1,13 @@
 name = "Zeta"
-filename = "Zeta-1.0-14.jar"
+filename = "Zeta-1.0-19.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/MVARlG2f/versions/v807AcrM/Zeta-1.0-14.jar"
+url = "https://cdn.modrinth.com/data/MVARlG2f/versions/VDiwJ2Xr/Zeta-1.0-19.jar"
 hash-format = "sha1"
-hash = "8f18288cb909d88215f081c014db550b72b2e07d"
+hash = "5b345ba7d1732cb6d165c9336b8e6dee11dda9f1"
 
 [update]
 [update.modrinth]
 mod-id = "MVARlG2f"
-version = "v807AcrM"
+version = "VDiwJ2Xr"
