Remove Alex's Caves
Lighting in new cave interfering with DH. Removed both Alex mods as the mobs mod is a significant source of TPS lag.
Changed description of optional betterfpsdist.
Maade ecospherical optional for testing.

--- a/mods/better-fps-render-distance.pw.toml
+++ b/mods/better-fps-render-distance.pw.toml
@@ -14,4 +14,4 @@ project-id = 551520
 
 [option]
 optional = true
-description = "Doesn't seem to work with Distant Horizons. Enable if needed for faster loading."
+description = "Seems to work with Distant Horizons. Enable if needed for faster loading."
