Found ice spikes issue
ecospherical expansion requires compat pack. Check apothicord. Added note to disable until compat baked into pack.
Also re-enabled tectonic, terrablender, and mystics biomes.

--- a/mods/ecospherical-expansion.pw.toml
+++ b/mods/ecospherical-expansion.pw.toml
@@ -14,4 +14,4 @@ version = "5lXIJiba"
 
 [option]
 optional = true
-description = "Possibly adding weird biomes in Snow Taiga? Breaking ice spikes?"
+description = "Possibly adding weird biomes in Snow Taiga? Breaking ice spikes? Confirmed. Disable until compat pack added."
