Testing Pams, Serene, Compat
Made optional to test strange Jungle Leaves on trees in Taiga. Contains fruit from Pams

Typos
optional toggle should be set to true not True
Refreshing Modlist

--- a/mods/pams-harvestcraft-2-food-core.pw.toml
+++ b/mods/pams-harvestcraft-2-food-core.pw.toml
@@ -11,3 +11,7 @@ mode = "metadata:curseforge"
 [update.curseforge]
 file-id = 5097798
 project-id = 372534
+
+[option]
+optional = true
+description = "Testing strange jungle trees in taiga biomes."
