--- a/mods/pams-harvestcraft-2-food-extended.pw.toml
+++ b/mods/pams-harvestcraft-2-food-extended.pw.toml
@@ -11,3 +11,7 @@ mode = "metadata:curseforge"
 [update.curseforge]
 file-id = 5147171
 project-id = 402231
+
+[option]
+optional = true
+description = "Testing strange jungle trees in taiga biomes."
