--- a/mods/pams-harvestcraft-2-crops.pw.toml
+++ b/mods/pams-harvestcraft-2-crops.pw.toml
@@ -11,3 +11,7 @@ mode = "metadata:curseforge"
 [update.curseforge]
 file-id = 4687624
 project-id = 361385
+
+[option]
+optional = true
+description = "Testing strange jungle trees in taiga biomes."
