--- a/mods/lithostitched.pw.toml
+++ b/mods/lithostitched.pw.toml
@@ -1,6 +1,6 @@
 name = "Lithostitched"
 filename = "lithostitched-forge-1.20.1-1.1.6.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/XaDC71GB/versions/leDMJ3Pd/lithostitched-forge-1.20.1-1.1.6.jar"
