--- a/mods/jei.pw.toml
+++ b/mods/jei.pw.toml
@@ -1,6 +1,6 @@
 name = "Just Enough Items"
 filename = "jei-1.20.1-forge-15.3.0.8.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/C3OE8nXl/jei-1.20.1-forge-15.3.0.8.jar"
